--- a/index.html
+++ b/index.html
@@ -589,138 +589,138 @@
                 </div>
                 <div id="step2-question-list">                  
                   <div id="question1" class="question show">
-                    <p>Pregunta 1</p>
+                    <p>¿Qién es el protagonista principal del "Señor de los anillos?"</p>
                     <div class="question-options">
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
                         <label class="form-check-label" for="flexRadioDefault1">
-                          Default radio
+                          Gollum
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" checked>
                         <label class="form-check-label" for="flexRadioDefault2">
-                          Default checked radio
+                          Frodo
                         </label>
                       </div>
                     </div>  
                   </div>
                   <div id="question2" class="question">
-                    <p>Pregunta 2</p>
+                    <p>En que pais se encuentra el rio Ebro?</p>
                     <div class="question-options">
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault2" id="flexRadioDefault21">
                         <label class="form-check-label" for="flexRadioDefault21">
-                          Default radio
+                          Brasil
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault2" id="flexRadioDefault22" checked>
                         <label class="form-check-label" for="flexRadioDefault22">
-                          Default checked radio
+                          Dinamarca
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault2" id="flexRadioDefault23">
                         <label class="form-check-label" for="flexRadioDefault23">
-                          Default radio
+                          España
                         </label>
                       </div>
                     </div>
                   </div>
                   <div id="question3" class="question">
-                    <p>Pregunta 3</p>
+                    <p>Donde nacio el futbolista Lionel Messi?</p>
                     <div class="question-options">
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault3" id="flexRadioDefault31">
                         <label class="form-check-label" for="flexRadioDefault31">
-                          Default radio
+                          Argentina
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault3" id="flexRadioDefault32" checked>
                         <label class="form-check-label" for="flexRadioDefault32">
-                          Default checked radio
+                          Uruguay
                         </label>
                       </div>
                     </div>                    
                   </div>
                   <div id="question4" class="question">
-                    <p>Pregunta 4</p>
+                    <p>Que tipo de cuentos escribía Allan Poe?</p>
                     <div class="question-options">
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault4" id="flexRadioDefault41">
                         <label class="form-check-label" for="flexRadioDefault41">
-                          Default radio
+                          Hadas
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault4" id="flexRadioDefault42" checked>
                         <label class="form-check-label" for="flexRadioDefault42">
-                          Default checked radio
+                          Terror
                         </label>
                       </div>
                     </div>
                   </div>
                   <div id="question5" class="question">
-                    <p>Pregunta 5</p>
+                    <p>Cual es la capital de Afganistan?</p>
                     <div class="question-options">
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault5" id="flexRadioDefault51">
                         <label class="form-check-label" for="flexRadioDefault51">
-                          Default radio
+                          Teheran
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault5" id="flexRadioDefault52" checked>
                         <label class="form-check-label" for="flexRadioDefault52">
-                          Default checked radio
+                          Asjabad
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault5" id="flexRadioDefault53">
                         <label class="form-check-label" for="flexRadioDefault53">
-                          Default radio
+                          Kabul
                         </label>
                       </div>
                     </div>                    
                   </div>
                   <div id="question6" class="question">
-                    <p>Pregunta 6</p>
+                    <p>Cuales países comparten las Montañas Rocosas?</p>
                     <div class="question-options">
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault6" id="flexRadioDefault61">
                         <label class="form-check-label" for="flexRadioDefault61">
-                          Default radio
+                          Francia y España
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault6" id="flexRadioDefault62" checked>
                         <label class="form-check-label" for="flexRadioDefault62">
-                          Default checked radio
+                          Estados Unidos y Canada
                         </label>
                       </div>
                     </div>
                   </div>
                   <div id="question7" class="question">
-                    <p>Pregunta 7</p>
+                    <p>Como se llamaba el reyno del Rey Arturo?</p>
                     <div class="question-options">
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault7" id="flexRadioDefault71">
                         <label class="form-check-label" for="flexRadioDefault71">
-                          Default radio
+                          Sherwood
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault7" id="flexRadioDefault72" checked>
                         <label class="form-check-label" for="flexRadioDefault72">
-                          Default checked radio
+                          Atlantis
                         </label>
                       </div>
                       <div class="form-check">
                         <input class="form-check-input" type="radio" name="flexRadioDefault7" id="flexRadioDefault73">
                         <label class="form-check-label" for="flexRadioDefault73">
-                          Default radio
+                          Camelot
                         </label>
                       </div>
                     </div>                    
