--- a/index.html
+++ b/index.html
@@ -1636,7 +1636,7 @@
           "sname": "stepps2",
           "mname": "mstepps2",       
           "criteria": 80,
-          "status": "enabled",
+          "status": "disabled",
           "questions": [
               {
                   "name": "question1",
