--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
             <button id="side-nav-btn" type="button" class="btn btn-primary side-nav-btn">
               <i class="bi bi-chevron-compact-right"></i>
             </button>
-            <div id="stepper" class="stepper">              
+            <div id="stepper" class="stepper">
+              <!--STEPPER: Aqui se lista la lista de lecciones-->              
               <!--Generador html-->
             </div>
           </div>
@@ -120,6 +121,7 @@
           <div class="video-main">
             <div class="video-wrapper">
               <div id="videoFrames" class="video-container">
+                <!--VIDEOS: Aqui se lista la lista de videos-->
                 <!--Generador HTML-->
               </div>
               <div class="d-flex justify-content-start align-items-center m-3">
@@ -136,7 +138,10 @@
               <div class="m-2">
                 <button id="enable-quiz" type="button" class="btn btn-outline-warning p-2">Hacer examen</button>
               </div>
-              <div id="statements"><!--Generador html--></div>
+              <div id="statements">
+                <!--QUIZ: Sección para agregar las listas del quiz-->
+                <!--Generador html-->
+              </div>
               <div class="recursos-main">
                 <ul class="nav nav-tabs" id="myTabRh" role="tablist">
                   <li class="nav-item" role="presentation">
@@ -159,12 +164,14 @@
                       <div class="seccion p-3">
                         <h4 class="mb-3">Archivos de la clase</h4>
                         <div id="archivos" class="d-flex flex-column">
+                          <!--ARCHIVOS DE LA CLASE: Aqui se listan los archivos de la clase-->
                           <!--Generador HTML-->
                         </div>
                       </div>
                       <div class="seccion p-3">
                         <h4 class="mb-3">Lecturas recomendadas</h4>
                         <div id="lecturas" class="d-flex flex-column">
+                          <!--LECTURAS RECOMENDADAS: Aqui se listan las lecturas recomendadas-->
                           <!--Generador HTML-->
                         </div>
                       </div>
@@ -215,6 +222,7 @@
                     <div>
                       <div class="marker-list">
                         <div id="mobile-stepper" class="offcanvas-body-card">
+                          <!--STEPPER: Aqui se lista la lista de lecciones-->
                           <!--Generador HTML-->
                         </div>
                       </div>
@@ -225,12 +233,14 @@
                       <div class="p-3 border-bottom">
                         <h4 class="mb-3">Archivos de la clase</h4>
                         <div id="mobile-archivos" class="d-flex flex-column">
+                          <!--ARCHIVOS DE LA CLASE: Aqui se listan los archivos de la clase tipo móvil-->
                           <!--Generador HTML-->
                         </div>
                       </div>
                       <div class="p-3 border-bottom">
                         <h4 class="mb-3">Lecturas recomendadas</h4>
                         <div id="mobile-lecturas" class="d-flex flex-column">
+                          <!--LECTURAS RECOMENDADAS: Aqui se listan las lecturas recomendadas tipo móvil-->
                           <!--Generador HTML-->
                         </div>
                       </div>
@@ -239,12 +249,14 @@
                   <div class="tab-pane fade" id="mchat-tab-pane" role="tabpanel" aria-labelledby="mchat-tab"
                     tabindex="2">
                     <div id="mobile-aportes" class="chat-box">
+                      <!--CHAT: Lista de chats tipo aportes modo móvil-->
                       <!--Generador de HTML-->
                     </div>
                   </div>
                   <div class="tab-pane fade" id="mchats-tab-pane" role="tabpanel" aria-labelledby="mchats-tab"
                     tabindex="3">
                     <div id="mobile-preguntas" class="chat-box">
+                      <!--CHAT: Lista de chats tipo preguntas modo móvil-->
                       <!--Generador de HTML-->
                     </div>
                   </div>
@@ -296,6 +308,7 @@
                     </div>
                   </div>
                   <div id="aportes" class="chat-box">
+                    <!--CHAT: Lista de chats tipo aportes-->
                     <!--Generador de HTML-->
                   </div>
                 </div>
@@ -309,6 +322,7 @@
                     </div>
                   </div>
                   <div id="preguntas" class="chat-box">
+                    <!--CHAT: Lista de chats tipo preguntas-->
                     <!--Generador de HTML-->
                   </div>
                 </div>
